; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sunvnet.c___vnet_mc_find.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sunvnet.c___vnet_mc_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnet_mcast_entry = type { i32, %struct.vnet_mcast_entry* }
%struct.vnet = type { %struct.vnet_mcast_entry* }

@ETH_ALEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.vnet_mcast_entry* (%struct.vnet*, i32*)* @__vnet_mc_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.vnet_mcast_entry* @__vnet_mc_find(%struct.vnet* %0, i32* %1) #0 {
  %3 = alloca %struct.vnet_mcast_entry*, align 8
  %4 = alloca %struct.vnet*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.vnet_mcast_entry*, align 8
  store %struct.vnet* %0, %struct.vnet** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.vnet*, %struct.vnet** %4, align 8
  %8 = getelementptr inbounds %struct.vnet, %struct.vnet* %7, i32 0, i32 0
  %9 = load %struct.vnet_mcast_entry*, %struct.vnet_mcast_entry** %8, align 8
  store %struct.vnet_mcast_entry* %9, %struct.vnet_mcast_entry** %6, align 8
  br label %10

10:                                               ; preds = %24, %2
  %11 = load %struct.vnet_mcast_entry*, %struct.vnet_mcast_entry** %6, align 8
  %12 = icmp ne %struct.vnet_mcast_entry* %11, null
  br i1 %12, label %13, label %28

13:                                               ; preds = %10
  %14 = load %struct.vnet_mcast_entry*, %struct.vnet_mcast_entry** %6, align 8
  %15 = getelementptr inbounds %struct.vnet_mcast_entry, %struct.vnet_mcast_entry* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @ETH_ALEN, align 4
  %19 = call i32 @memcmp(i32 %16, i32* %17, i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %13
  %22 = load %struct.vnet_mcast_entry*, %struct.vnet_mcast_entry** %6, align 8
  store %struct.vnet_mcast_entry* %22, %struct.vnet_mcast_entry** %3, align 8
  br label %29

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23
  %25 = load %struct.vnet_mcast_entry*, %struct.vnet_mcast_entry** %6, align 8
  %26 = getelementptr inbounds %struct.vnet_mcast_entry, %struct.vnet_mcast_entry* %25, i32 0, i32 1
  %27 = load %struct.vnet_mcast_entry*, %struct.vnet_mcast_entry** %26, align 8
  store %struct.vnet_mcast_entry* %27, %struct.vnet_mcast_entry** %6, align 8
  br label %10

28:                                               ; preds = %10
  store %struct.vnet_mcast_entry* null, %struct.vnet_mcast_entry** %3, align 8
  br label %29

29:                                               ; preds = %28, %21
  %30 = load %struct.vnet_mcast_entry*, %struct.vnet_mcast_entry** %3, align 8
  ret %struct.vnet_mcast_entry* %30
}

declare dso_local i32 @memcmp(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
